# scale-of-dependencies

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: pre-commit.yml
