[tool.poetry]
name = "scale-of-dependencies"
version = "0.1.0"
description = ""
authors = ["DoPanik <963151+DoPaNik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
